--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   persistent_bottom_nav_bar_v2: ^5.2.3
   google_fonts: ^6.2.1
   flutter_svg: ^2.1.0
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
